src/routes/game/components/gridBoard/GridBoard.module.css
/* ... */
.SwappedMirroredBothGameBoardGrid {
  position: relative;
  display: grid;
  grid-template-columns:
    5px var(--card-size) var(--card-size) 1fr var(--card-size)
    var(--card-size) var(--card-size) 1fr var(--card-size) var(--card-size) 5px;
  grid-template-rows:
    5px repeat(3, var(--card-size)) 1fr 5px 5px 1fr repeat(3, var(--card-size))
    5px;
  width: 100%;
  height: 90vh;
  height: 90dvh;
  gap: 1dvh;
  padding: 1vh;
  grid-template-areas:
    '. . . . . . . . . . .'
    '. pOneBanish pOneCount . . pOneArsenal pOneArsenal pOneArsenal . pOneLegs .'
    '. pOneDeck pOnePitch . pOneWeaponLZone pOneHero pOneWeaponRZone . pOneHands pOneChest .'
    '. pOneGraveyard pOnePermanents pOnePermanents pOnePermanents pOnePermanents pOnePermanents pOnePermanents healthWidget pOneHead .'
    '. . combatChain combatChain combatChain combatChain combatChain combatChain healthWidget . .'
    '. . combatChain combatChain combatChain combatChain combatChain combatChain healthWidget . .'
    '. . combatChain combatChain combatChain combatChain combatChain combatChain healthWidget . .'
    '. . combatChain combatChain combatChain combatChain combatChain combatChain healthWidget . .'
    '. pTwoGraveyard pTwoPermanents pTwoPermanents pTwoPermanents pTwoPermanents pTwoPermanents pTwoPermanents healthWidget pTwoHead .'
    '. pTwoDeck pTwoPitch . pTwoWeaponLZone pTwoHero pTwoWeaponRZone . pTwoHands pTwoChest .'
    '. pTwoBanish pTwoCount . . pTwoArsenal pTwoArsenal pTwoArsenal . pTwoLegs .'
    '. . . . . . . . . . .';
}

.healthWidget {
  grid-area: healthWidget;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.gameBoardGrid > div {
  width: 100%;
  height: 100%;
  z-index: 5;
}

.MirroredOpponentGameBoardGrid > div {
  width: 100%;
  height: 100%;
  z-index: 5;
}

.MirroredPlayerGameBoardGrid > div {
  width: 100%;
  height: 100%;
  z-index: 5;
}

.MirroredBothGameBoardGrid > div {
  width: 100%;
  height: 100%;
  z-index: 5;
}

.SwappedGameBoardGrid > div {
  width: 100%;
  height: 100%;
  z-index: 5;
}

.SwappedMirroredOpponentGameBoardGrid > div {
  width: 100%;
  height: 100%;
  z-index: 5;
}

.SwappedMirroredPlayerGameBoardGrid > div {
  width: 100%;
  height: 100%;
  z-index: 5;
}

.SwappedMirroredBothGameBoardGrid > div {
  width: 100%;
  height: 100%;
  z-index: 5;
}

.pTwoLegs {
  grid-area: pTwoLegs;
  aspect-ratio: 1;
}

.pTwoPermanents {
  grid-area: pTwoPermanents;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  min-height: var(--card-size);
}

.pTwoArsenal {
  grid-area: pTwoArsenal;
}

.pTwoCount {
  grid-area: pTwoCount;
  aspect-ratio: 1;
}

.pTwoBanish {
  grid-area: pTwoBanish;
  aspect-ratio: 1;
}

.pTwoChest {
  grid-area: pTwoChest;
  aspect-ratio: 1;
}

.pTwoHands {
  grid-area: pTwoHands;
  aspect-ratio: 1;
}

.pTwoWeaponLZone {
  grid-area: pTwoWeaponLZone;
  aspect-ratio: 1;
}

.pTwoHero {
  grid-area: pTwoHero;
  aspect-ratio: 1;
}

.pTwoWeaponRZone {
  grid-area: pTwoWeaponRZone;
  aspect-ratio: 1;
}

.pTwoPitch {
  grid-area: pTwoPitch;
  aspect-ratio: 1;
}

.pTwoDeck {
  grid-area: pTwoDeck;
  aspect-ratio: 1;
}

.pTwoHead {
  grid-area: pTwoHead;
  aspect-ratio: 1;
}

.pTwoGraveyard {
  grid-area: pTwoGraveyard;
  aspect-ratio: 1;
}

.combatChain {
  position: absolute;
  inset: calc(var(--card-size) * -0.6) 0 calc(var(--card-size) * -0.6) 0;
  grid-area: combatChain;
  border-radius: 1em;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding-right: 10px;
  pointer-events: none;
}

.pOneLegs {
  grid-area: pOneLegs;
  aspect-ratio: 1;
}

.pOnePermanents {
  grid-area: pOnePermanents;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  min-height: calc(var(--card-size) + 8px);
}

.pOneArsenal {
  grid-area: pOneArsenal;
}

.pOneCount {
  grid-area: pOneCount;
  aspect-ratio: 1;
}

.pOneBanish {
  grid-area: pOneBanish;
  aspect-ratio: 1;
}

.pOneChest {
  grid-area: pOneChest;
  aspect-ratio: 1;
}

.pOneHands {
  grid-area: pOneHands;
  aspect-ratio: 1;
}

.pOneWeaponLZone {
  grid-area: pOneWeaponLZone;
  aspect-ratio: 1;
}

.pOneHero {
  grid-area: pOneHero;
  aspect-ratio: 1;
}

.pOneWeaponRZone {
  grid-area: pOneWeaponRZone;
  aspect-ratio: 1;
}

.pOnePitch {
  grid-area: pOnePitch;
  aspect-ratio: 1;
}

.pOneDeck {
  grid-area: pOneDeck;
  aspect-ratio: 1;
}

.pOneHead {
  grid-area: pOneHead;
  aspect-ratio: 1;
}

.pOneGraveyard {
  grid-area: pOneGraveyard;
  aspect-ratio: 1;
}

.playerPromptWrapper {
  position: fixed;
  bottom: 0;
  margin: auto;
  width: 100%;
  z-index: 20;
  pointer-events: none;
}

.playerPromptWrapper > div {
  width: 50%;
  margin: auto;
  pointer-events: all;
}

@media (max-width: 600px) {
  .playerPromptWrapper > div {
    width: 90%;
  }
}

@media (max-width: 600px) and (orientation: portrait) {
  .playerPromptWrapper {
    bottom: 4px;
  }
}

